--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -108,9 +108,23 @@ a:hover {
   background: rgba(255, 255, 255, 70%);
 }
 
+
 html[data-theme='dark'] {
   .my-card {
     /* stylelint-disable-next-line color-function-notation */
     background: rgba(30, 30, 30, 70%);
   }
+}
+
+.scroll-y {
+  overflow-y: auto;
+}
+
+.dimension-value {
+  font-weight: bold !important;
+  font-size: 1rem !important;
+}
+
+.bg-white {
+  background: #fff;
 }
