--- a/src/styles/vant.less
+++ b/src/styles/vant.less
@@ -9,3 +9,7 @@ body {
 .van-action-sheet__cancel {
   color: var(--van-primary-color) !important;
 }
+
+.van-grid-padding {
+  padding: var(--van-cell-vertical-padding) !important;
+}
